[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aerobench"
version = "0.0.2"
dependencies = [
    "numpy==2.4.2",
    "matplotlib==3.10.8",
    "cachier==4.1.0",
    "scipy==1.17.0",
    "swiglpk==5.0.13",
    "dotmap==1.3.30"
]

[tool.setuptools.packages.find]
where = ["code"]
 
